<resources>
    <string name="app_name">Pizza Party</string>
    <string name="number_of_people">Number of people?</string>
    <string name="how_hungry">How hungry?</string>
    <string name="light">Light</string>
    <string name="medium">Medium</string>
    <string name="ravenous">Ravenous</string>
    <string name="total_pizzas">Total pizzas: ?</string>
    <string name="calculate">Calculate</string>
    <string name="total_pizzas_num">Total pizzas: %d</string>
    <string name="action_add">Plus menu</string>
    <string name="action_logout">Logout</string>
    <string name="action_about">About</string>

    <string-array name="hunger_array">
        <item>Light</item>
        <item>Medium</item>
        <item>Ravenous</item>
    </string-array>
</resources>